--- a/.github/workflows/release-multiple.yaml
+++ b/.github/workflows/release-multiple.yaml
@@ -6,6 +6,9 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+permissions:
+  contents: write
+  
 jobs:
   # Checking if a new version was released at all before starting the matrix would be more efficient, but depends on device
   # So run the whole matrix as cron. One of the first checks is if there is a need for release at all.
@@ -19,16 +22,16 @@ jobs:
             magisk-preinit-device: metadata
           - device-id: tokay # Pixel 9
             magisk-preinit-device: sda10
+          - device-id: husky # Pixel 8 Pro
+            magisk-preinit-device: sda10
+          - device-id: shiba # Pixel 8
+            magisk-preinit-device: sda10
+          - device-id: bluejay # Pixel 6a
+            magisk-preinit-device: sda8
+#          - device-id: akita # Pixel 8a # https://github.com/Enovale/rooted-graphene/blob/4bb6f99cc0e1c22acd4bc71d6662ae3d9059849a/.github/workflows/release-multiple.yaml#L23 
+#            magisk-preinit-device: sda10
 #          - device-id: raven # Pixel 6 Pro
 #            magisk-preinit-device: metadata # https://github.com/skrimix/rooted-graphene/blob/319839bfcaba6548446f17bf8e56cd7ecb8f793e/.github/workflows/release.yaml#L39
-#          - device-id: akita # Pixel 8a
-#            magisk-preinit-device: sda10
-#          - device-id: husky # Pixel 8 Pro
-#            magisk-preinit-device: sda10
-#          - device-id: shiba # Pixel 8
-#            magisk-preinit-device: sda10
-#          - device-id: bluejay # Pixel 6a
-#            magisk-preinit-device: sda8
 #          - device-id: cheetah # Pixel Pro 7 
 #            magisk-preinit-device: persist # https://xdaforums.com/t/guide-to-lock-bootloader-while-using-rooted-otaos-magisk-root.4510295/page-5#post-88499289)
     uses: ./.github/workflows/release-single.yaml
