--- a/.github/workflows/release-multiple.yaml
+++ b/.github/workflows/release-multiple.yaml
@@ -16,24 +16,8 @@ jobs:
     strategy:
       matrix:
         include:
-          - device-id: komodo # Pixel 9 Pro XL
+          - device-id: akita # Pixel 8a # https://github.com/Enovale/rooted-graphene/blob/4bb6f99cc0e1c22acd4bc71d6662ae3d9059849a/.github/workflows/release-multiple.yaml#L23 
             magisk-preinit-device: sda10
-          - device-id: caiman # Pixel 9 Pro
-            magisk-preinit-device: sda10
-          - device-id: oriole # Pixel 6
-            magisk-preinit-device: metadata
-          - device-id: tokay # Pixel 9
-            magisk-preinit-device: sda10
-          - device-id: husky # Pixel 8 Pro
-            magisk-preinit-device: sda10
-          - device-id: shiba # Pixel 8
-            magisk-preinit-device: sda10
-          - device-id: bluejay # Pixel 6a
-            magisk-preinit-device: sda8
-          - device-id: lynx # Pixel 7a
-            magisk-preinit-device: sda8
-#          - device-id: akita # Pixel 8a # https://github.com/Enovale/rooted-graphene/blob/4bb6f99cc0e1c22acd4bc71d6662ae3d9059849a/.github/workflows/release-multiple.yaml#L23 
-#            magisk-preinit-device: sda10
 #          - device-id: raven # Pixel 6 Pro
 #            magisk-preinit-device: metadata # https://github.com/skrimix/rooted-graphene/blob/319839bfcaba6548446f17bf8e56cd7ecb8f793e/.github/workflows/release.yaml#L39
 #          - device-id: cheetah # Pixel Pro 7 
